--- a/public/login.css
+++ b/public/login.css
@@ -93,6 +93,7 @@ body::-webkit-scrollbar-corner {
     height: 100%;
     background: whitesmoke;
     position: relative;
+    border-radius: 20px;
 }
 
 .icons {
