--- a/public/profile.css
+++ b/public/profile.css
@@ -774,10 +774,11 @@ i.fa-solid.fa-pencil {
 
 .left-menu ul li{
   margin: 1rem auto;
-  height: 40px;
+  height: 50px;
   border-radius: 20px;
   cursor: pointer;
   padding: 10px;
+  font-size: 20px;  
 }
 
 .selected-settings{
