--- a/public/profile.css
+++ b/public/profile.css
@@ -345,10 +345,16 @@ i.fa-solid.fa-bars.id\= {
     margin: 2rem auto;
     color: #dddddd;
     font-family: 'Teko';
+    display: flex;
 }
 
 .channel-name h3 {
     margin-bottom: 20px;
+}
+
+.channel-name .fa-registered{
+color: rgba(255, 255, 255, 0.1);
+margin-left: 5px;
 }
 
 .main-content {
