--- a/public/profile.css
+++ b/public/profile.css
@@ -356,6 +356,7 @@ i.fa-solid.fa-bars.id\= {
 .channel-name .fa-registered{
 color: rgba(255, 255, 255, 0.3);
 margin-left: 5px;
+display: none;    
 }
 
 .main-content {
