--- a/public/profile.css
+++ b/public/profile.css
@@ -940,7 +940,7 @@ i.fa-solid.fa-pen {
     opacity: 0;
 }
 
-.settings .content{
+.settings .reg-process{
 margin: 1rem auto;  
 text-align: center;
 display: flex;
