--- a/public/profile.css
+++ b/public/profile.css
@@ -996,9 +996,13 @@ margin: 10px;
 }
 
 .registration-complete{
-  margin: 1rem auto;
-  display: none;
+    flex-direction: column;
+    margin: 8rem auto;
+    justify-content: center;
+    align-items: center;  
+    display: none;
 }
+
 
 /* Analytics */
 
