--- a/public/explorer.css
+++ b/public/explorer.css
@@ -34,100 +34,6 @@ body::-webkit-scrollbar-corner {
 }
 
 
-
-
-header {
-    width: 100%;
-    height: 70px;
-    background: #03002e;
-    background: rgba(0, 0, 0, 0.3);
-    padding: 5px;
-    display: flex;
-    letter-spacing: 0.02rem;
-}
-
-header h1 {
-    color: rgba(255, 255, 255, 0.3);
-    letter-spacing: 0.3rem;
-    margin: 0 1rem;
-    font-family: 'Teko';
-}
-
-i#main-view-bars {
-    color: #dddddd;
-    position: absolute;
-    right: 0;
-    top: 0;
-    font-size: 30px;
-    margin: 1rem;
-    cursor: pointer;
-}
-
-i#mobile-view-bars {
-    display: none;
-}
-
-#logo {
-    position: absolute;
-    left: 0;
-    top: 0;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    margin-top: -1.5rem;
-}
-
-
-.search {
-    width: 30rem;
-    margin: 0.5rem auto;
-}
-
-.search input {
-    width: 30rem;
-    height: 2.5rem;
-    border-radius: 10px;
-    outline: none;
-    border: none;
-    padding: 10px;
-    background: #03002e;
-    background: rgba(255, 255, 255, 0.1);
-    background: rgba(128, 128, 128, 0.08);
-    font-size: 16px;
-    color: white;
-    caret-color: #dddddd;
-    font-family: "Teko";
-    font-weight: 700;
-}
-
-.retreat {
-    width: 7rem;
-    height: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 1rem;
-}
-
-.retreat a {
-    text-decoration: none;
-    color: #dddddd;
-}
-
-.retreat .btn {
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    color: #dddddd;
-    font-family: "Teko";
-    font-size: 18px;
-    cursor: pointer;
-    border: none;
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
-    box-shadow: inset 2px 2px 4px #6a6a6a, inset -2px -2px 4px #050606;
-    border-radius: 10px;
-}
-
 .nav {
     position: absolute;
     top: 0;
@@ -219,26 +125,113 @@ i#mobile-view-bars {
     margin: 1rem;
 }
 
-
-
 .content-container {
     width: 100%;
     height: 100%;
-    border-radius: 15px;
-    margin: 0 auto;
     letter-spacing: 0.02rem;
+    background: rgba(0, 0, 0, .2);
+    position: relative;
+}
+
+.header {
+    width: 100%;
+    height: 10%;
+    padding: 5px;
+    display: flex;
+
+}
+
+.header h1 {
+    color: rgba(255, 255, 255, 0.3);
+    letter-spacing: 0.3rem;
+    margin: 0 1rem;
+    font-family: 'Teko';
+}
+
+i#main-view-bars {
+    color: #dddddd;
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 30px;
+    margin: 1rem;
+    cursor: pointer;
+}
+
+i#mobile-view-bars {
+    display: none;
+}
+
+#logo {
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-top: -1.5rem;
+}
+
+
+.search {
+    width: 30rem;
+    margin: 0.5rem auto;
+}
+
+.search input {
+    width: 30rem;
+    height: 2.5rem;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    padding: 10px;
+    background: #03002e;
+    background: rgba(255, 255, 255, 0.1);
+    background: rgba(128, 128, 128, 0.08);
+    font-size: 16px;
+    color: white;
+    caret-color: #dddddd;
+    font-family: "Teko";
+    font-weight: 700;
+}
+
+.retreat {
+    width: 7rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1rem;
+}
+
+.retreat a {
+    text-decoration: none;
+    color: #dddddd;
+}
+
+.retreat .btn {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    color: #dddddd;
+    font-family: "Teko";
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 2px 2px 4px #6a6a6a, inset -2px -2px 4px #050606;
+    border-radius: 10px;
+}
+
+.center {
     display: flex;
 }
 
 /* Left Pane */
 
 .left-pane {
-    width: 20%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.3);
-    border-radius: 0px 0 0 15px;
-    /*   overflow-y: scroll;
-  overflow-x:hidden;	 */
+    width: 15%;
+    height: 100%;
 }
 
 .left-pane::-webkit-scrollbar {
@@ -267,9 +260,7 @@ i#mobile-view-bars {
 }
 
 .menu {
-    width: 250px;
-    /*   min-height: 50%;
-  max-height: 58%;	 */
+    width: 100%;
     border-bottom: 0.5px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -312,17 +303,15 @@ i#mobile-view-bars {
 }
 
 .category {
-    width: 250px;
+    width: 100%;
     height: 50%;
 }
 
 /* Main  */
 
 .main-content {
-    width: 75%;
-    height: 100vh;
-    overflow: hidden;
-    background: rgba(0, 0, 0, 0.3);
+    width: 65%;
+    height: 100%;
 }
 
 .main-content h2 {
@@ -335,7 +324,7 @@ i#mobile-view-bars {
 
 .screen {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
@@ -597,10 +586,8 @@ button:hover {
 
 
 .right-pane {
-    width: 25%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.3);
-    border-radius: 0 0 15px 0;
+    width: 20%;
+    height: 100%;
 }
 
 .right-pane::-webkit-scrollbar {
@@ -621,8 +608,8 @@ button:hover {
 }
 
 .popular {
-    width: 95%;
-    /*   height: 45%; */
+    width: 100%;
+    height: 50%;
     background: rgba(128, 128, 128, 0.08);
     margin: 1rem auto;
     padding: 8px;
@@ -633,9 +620,6 @@ button:hover {
     overflow-x: hidden;
 }
 
-.popular.uploads {
-    height: 48%;
-}
 
 .popular::-webkit-scrollbar {
     width: 5px;
@@ -694,7 +678,6 @@ button:hover {
     height: 5rem;
     margin: .5rem 0;
     overflow: hidden;
-    /* flex-wrap: nowrap; */
     text-overflow: ellipsis;
 
 }
