--- a/public/profile.css
+++ b/public/profile.css
@@ -237,6 +237,7 @@ i.fa-solid.fa-bars.id\= {
     display: flex;
     width: 100%;
     height: 90%;
+    margin-top: 25px;
 }
 
 .menu {
@@ -358,7 +359,7 @@ i.fa-solid.fa-bars.id\= {
 }
 
 .main-content {
-    width: 70%;
+    width: 65%;
     height: 100%;
     padding: 5px;
 }
@@ -586,7 +587,7 @@ i.fa-solid.fa-pencil {
 }
 
 .right-pane {
-    width: 15%;
+    width: 20%;
     height: 100%;
 }
 
