--- a/public/profile.css
+++ b/public/profile.css
@@ -370,8 +370,8 @@ i.fa-solid.fa-bars.id\= {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow: scroll;
+    /* overflow-x: hidden; */
     padding-bottom: 100px;
     font-family: 'Teko';
 }
@@ -424,7 +424,7 @@ i.fa-solid.fa-bars.id\= {
     height: 100%;
     padding: 5px;
     background: rgba(19, 19, 19, 0.8);
-    border-radius: 30px;
+    border-radius: 10px;
     z-index: 10;
     position: absolute;
     top: 0;
