--- a/public/explorer.css
+++ b/public/explorer.css
@@ -1004,7 +1004,7 @@ button:hover {
 
 }
 
-@media screen and (min-height: 659px) and (max-height: 750px) {
+/* @media screen and (min-height: 659px) and (max-height: 750px) {
     .left-pane {
         overflow-y: scroll;
         overflow-x: hidden;
@@ -1016,4 +1016,4 @@ button:hover {
     }
 
 
-}
+} */
