--- a/public/profile.css
+++ b/public/profile.css
@@ -284,20 +284,20 @@ i.fa-solid.fa-bars.id\= {
 
 
 .user-info-card {
-    width: 15.7rem;
-    height: 23rem;
+    width: 100%;
+    height: 50%;
     background: rgba(128, 128, 128, 0.08);
     padding: 10px;
     border-radius: 20px;
     margin: 1rem 0;
-    margin-right: 30px;
+    /* margin-right: 30px; */
     backdrop-filter: blur(5px);
     box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.5);
 }
 
 .channel-links {
-    width: 14.5rem;
-    height: 20rem;
+    width: 100%;
+    /* height: 20rem; */
     border-top: 0.5px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -1150,7 +1150,7 @@ td {
 }
 
 .newUpload .video-info {
-    width: 50%;
+    width: 55%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -1158,7 +1158,7 @@ td {
 }
 
 .newUpload .video-info .textarea {
-    width: 25rem;
+    width: 100%;
     height: 3.5rem;
     background: rgba(255, 255, 255, 0.1);
     border: none;
@@ -1193,7 +1193,7 @@ td {
 }
 
 .categories {
-    width: 50%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
