--- a/public/explorer.css
+++ b/public/explorer.css
@@ -127,7 +127,7 @@ body::-webkit-scrollbar-corner {
 
 .content-container {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     letter-spacing: 0.02rem;
     background: rgba(0, 0, 0, .2);
     position: relative;
