--- a/public/profile.css
+++ b/public/profile.css
@@ -133,7 +133,7 @@ body::-webkit-scrollbar-corner {
 
 .content-container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: rgba(0, 0, 0, .2);
 }
 
