--- a/public/profile.css
+++ b/public/profile.css
@@ -1192,6 +1192,50 @@ td {
     color: gray;
 }
 
+.content-tags{
+  width: 100%;
+  height: 3rem;
+}
+
+.content-tags ul{
+  display: flex;
+  list-style-type: none;
+  padding: 7px;
+  border: 2px solid black;
+  background: rgba(0,0, 0);
+  border-radius: 10px;
+  margin-top: 25px;
+  flex-wrap: wrap;
+}
+
+.content-tags ul li{
+  margin: 4px 3px;
+  border-radius: 5px;
+  background: rgba( 0, 0, 0, .4);
+  padding: 5px 8px 5px 10px;
+  display: flex;
+  
+}
+
+.content-tags ul li i{
+  margin-left: 8px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.content-tags ul input {
+  flex: 1;
+  padding: 5px;
+  border: none;
+  border-radius: 10px;
+  outline: none;
+  background: transparent;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 18px;
+  font-family: 'Unbounded';
+}
+
+
 .categories {
     width: 45%;
     display: flex;
