--- a/public/profile.css
+++ b/public/profile.css
@@ -1178,34 +1178,32 @@ td {
 }
 
 #tags[contenteditable]:empty::before {
-    content: "Video Tags";
+    content: "tags";
     color: gray;
 }
 
 #description[contenteditable]:empty::before {
-    content: "Video Description";
+    content: "description";
     color: gray;
 }
 
 #title[contenteditable]:empty::before {
-    content: "Video Title";
+    content: "title";
     color: gray;
 }
 
-.content-tags{
-  width: 100%;
-  height: 3rem;
+.content-tags {
+    width: 100%;
+    height: 5rem;
+    margin: 25px 0;
 }
 
-.content-tags ul{
-  display: flex;
-  list-style-type: none;
-  padding: 7px;
-  border: 2px solid black;
-  background: rgba(0,0, 0);
-  border-radius: 10px;
-  margin-top: 25px;
-  flex-wrap: wrap;
+.content-tags ul {
+    display: flex;
+    list-style-type: none;
+    border-radius: 10px;
+    font-family: 'Teko';
+    flex-wrap: wrap;
 }
 
 .content-tags ul li{
@@ -1224,15 +1222,19 @@ td {
 }
 
 .content-tags ul input {
-  flex: 1;
-  padding: 5px;
-  border: none;
-  border-radius: 10px;
-  outline: none;
-  background: transparent;
-  color: rgba(255, 255, 255, 0.5);
-  font-size: 18px;
-  font-family: 'Unbounded';
+    flex: 1;
+    padding: 5px;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    color: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.1);
+    font-size: 18px;
+    font-family: 'Unbounded';
+    height: 4rem;
+    width: 100%;
+    font-family: 'Teko';
+    font-weight: 700;
 }
 
 
