--- a/public/profile.css
+++ b/public/profile.css
@@ -1194,8 +1194,10 @@ td {
 
 .content-tags {
     width: 100%;
-    height: 5rem;
+    max-height: 5rem;
     margin: 25px 0;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
 }
 
 .content-tags ul {
@@ -1206,13 +1208,13 @@ td {
     flex-wrap: wrap;
 }
 
-.content-tags ul li{
-  margin: 4px 3px;
-  border-radius: 5px;
-  background: rgba( 0, 0, 0, .4);
-  padding: 5px 8px 5px 10px;
-  display: flex;
-  
+.content-tags ul li {
+    margin: 4px 3px;
+    border-radius: 5px;
+    background: rgba( 255, 255, 255, .4);
+    padding: 5px 8px 5px 10px;
+    display: flex;
+    height: 2rem;
 }
 
 .content-tags ul li i{
