--- a/public/theater.css
+++ b/public/theater.css
@@ -116,7 +116,7 @@ body::-webkit-scrollbar-corner {
 
 .center {
     display: flex;
-    height: 90%;
+    height: 100vh;
     width: 100%;
 }
 
@@ -130,7 +130,7 @@ body::-webkit-scrollbar-corner {
 
 .feature-presentation {
     width: 100%;
-    height: 55%;
+    height: 65%;
     border-radius: 15px;
     border: none;
     margin-bottom: .5rem;
