--- a/public/explorer.css
+++ b/public/explorer.css
@@ -158,6 +158,15 @@ body::-webkit-scrollbar-corner {
   color: #fdfbf9;
   font-family: 'teko';
   letter-spacing: 0.02rem;
+    transition: 0.4s;
+    transform: scale(0);
+    position: absolute;
+    right: 2%;
+    top: 10%;
+}
+
+.dropdown.active{
+transform: scale(1)
 }
 
 .userinfo {
