--- a/public/explorer.css
+++ b/public/explorer.css
@@ -149,7 +149,7 @@ body::-webkit-scrollbar-corner {
 }
 
 .dropdown{
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(5, 5, 41, 0.85);
   width: 350px;
   height: 550px;
   border-radius: 10px;
@@ -157,12 +157,13 @@ body::-webkit-scrollbar-corner {
   padding: 10px;
   color: #fdfbf9;
   font-family: 'teko';
+  font-weight: 700;
   letter-spacing: 0.02rem;
-    transition: 0.4s;
-/*     transform: scale(0); */
-    position: absolute;
-    right: 2%;
-    top: 50%;
+  transition: 0.4s;
+  transform: scale(0);
+  position: absolute;
+  right: 2%;
+  top: 75%;
 }
 
 .dropdown.active{
@@ -184,6 +185,7 @@ transform: scale(1)
   width: 80px;
   height: 80px;
   border-radius: 50%;
+  margin: 8px;
 }
 
 .dropdown ul li{
