--- a/public/explorer.css
+++ b/public/explorer.css
@@ -300,6 +300,7 @@ height: 60px;
     height: 45px;
     border-radius: 50%;
     box-shadow: 1px 1px 4px 3px rgb(255 255 255 / 20%);
+    cursor: pointer;
 }
 
 /* Left Pane */
