--- a/public/explorer.css
+++ b/public/explorer.css
@@ -129,7 +129,7 @@ body::-webkit-scrollbar-corner {
     width: 100%;
     height: 100%;
     letter-spacing: 0.02rem;
-    background: rgba(0, 0, 0, .2);
+/*     background: rgba(0, 0, 0, .2); */
     position: relative;
 }
 
