--- a/public/explorer.css
+++ b/public/explorer.css
@@ -114,7 +114,7 @@ body::-webkit-scrollbar-corner {
     letter-spacing: 110px;
 }
 
-#logout {
+/* #logout {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -123,7 +123,7 @@ body::-webkit-scrollbar-corner {
     font-size: 25px;
     cursor: pointer;
     margin: 1rem;
-}
+} */
 
 .content-container {
     width: 100%;
