--- a/public/explorer.css
+++ b/public/explorer.css
@@ -164,6 +164,10 @@ body::-webkit-scrollbar-corner {
   position: absolute;
   right: 2%;
   top: 75%;
+      background-color: hsla(240, 80%, 9%, .95);
+    background-image:
+        radial-gradient(at 91% 79%, hsla(240, 0%, 96%, 0.2) 0px, transparent 50%),
+        radial-gradient(at 0% 0%, hsla(0, 0%, 96%, 0.2) 0px, transparent 50%);  
 }
 
 .dropdown.active{
@@ -174,7 +178,8 @@ transform: scale(1)
   display: flex;
   margin: 10px;
   margin-bottom: 20px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5)
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  align-items: center;
 }
 
 .userinfo h3{
