--- a/public/login.css
+++ b/public/login.css
@@ -418,6 +418,11 @@ form input {
     .options ul li {
         font-size: 20px;
     }
+    
+   .terms {
+    width: 60%;
+
+}
 
 
 }
@@ -454,6 +459,12 @@ form input {
     .options ul li {
         font-size: 20px;
     }
+    
+       .terms {
+    width: 60%;
+
+}
+
 
 
 
