--- a/backend/email-templates/newmovierentalsale.handlebars
+++ b/backend/email-templates/newmovierentalsale.handlebars
@@ -152,7 +152,7 @@ body .avatar72 img {width: 72px; height: auto; -webkit-border-radius: 3px; -moz-
 										</tr>
 										<tr>
 											<td valign="top" width="100%" style="text-align: center; font-family: Helvetica, Arial, sans-serif, 'Open Sans'; font-size: 28px; color: #fdfbf9; line-height: 34px; font-weight: 700;" class="fullCenter">
-												Congrats! Someone purchased one of your films for viewing!
+												Congrats! Someone purchased your film, {{title}} for viewing!
 											</td>
 										</tr>
 										<tr>
