--- a/backend/email-templates/newfarisubscriber.handlebars
+++ b/backend/email-templates/newfarisubscriber.handlebars
@@ -255,7 +255,7 @@ body .avatar72 img {width: 72px; height: auto; -webkit-border-radius: 3px; -moz-
 										</tr>
 										<tr>
 											<td valign="top" width="100%" style="text-align: center; font-family: Helvetica, Arial, sans-serif, 'Open Sans'; font-size: 28px; color: #ffffff; line-height: 34px; font-weight: 700;" class="fullCenter">
-												Congrats! You've becom a Fari subscriber!
+												Congrats! You've become a Fari subscriber!
 											</td>
 										</tr>
 										<tr>
